# my-second-android-app

./: README.md  index.html  package.json  pnpm-lock.yaml  upload-keystore.jks
src/: main.ts
src-tauri/: Cargo.toml  lines.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
